updat code after fix flow sonarqube